Set default value for income and budget inputs
Added default value of 0 to income and budget inputs.

--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
 <div class="overview-card income-card">
 <div class="card-header">Monthly Income</div>
 <div class="currency-input-wrapper">
-<input type="number" id="monthly-income" class="currency-input" min="0" step="0.01" placeholder="0.00">
+<input type="number" id="monthly-income" class="currency-input" min="0" step="0.01" placeholder="0.00" value="0">
 </div>
 <button class="btn btn-primary btn-sm" id="save-income-btn">Save Income</button>
 <div class="income-display" id="income-display">$0.00</div>
@@ -113,14 +113,14 @@
 <div class="income-subsection">
 <h3>Investment Income</h3>
 <div class="currency-input-wrapper">
-<input type="number" id="investment-income" class="currency-input income-input" min="0" step="0.01" placeholder="0.00">
+<input type="number" id="investment-income" class="currency-input income-input" min="0" step="0.01" placeholder="0.00" value="0">
 </div>
 </div>
 
 <div class="income-subsection">
 <h3>Other Income</h3>
 <div class="currency-input-wrapper">
-<input type="number" id="other-income" class="currency-input income-input" min="0" step="0.01" placeholder="0.00">
+<input type="number" id="other-income" class="currency-input income-input" min="0" step="0.01" placeholder="0.00" value="0">
 </div>
 </div>
 
@@ -139,61 +139,61 @@
 <div class="budget-item">
 <label>Food</label>
 <div class="currency-input-wrapper">
-<input type="number" id="budget-food" class="currency-input budget-input" min="0" step="0.01">
+<input type="number" id="budget-food" class="currency-input budget-input" min="0" step="0.01" value="0">
 </div>
 </div>
 <div class="budget-item">
 <label>Transportation</label>
 <div class="currency-input-wrapper">
-<input type="number" id="budget-transportation" class="currency-input budget-input" min="0" step="0.01">
+<input type="number" id="budget-transportation" class="currency-input budget-input" min="0" step="0.01" value="0">
 </div>
 </div>
 <div class="budget-item">
 <label>Entertainment</label>
 <div class="currency-input-wrapper">
-<input type="number" id="budget-entertainment" class="currency-input budget-input" min="0" step="0.01">
+<input type="number" id="budget-entertainment" class="currency-input budget-input" min="0" step="0.01" value="0">
 </div>
 </div>
 <div class="budget-item">
 <label>Shopping</label>
 <div class="currency-input-wrapper">
-<input type="number" id="budget-shopping" class="currency-input budget-input" min="0" step="0.01">
+<input type="number" id="budget-shopping" class="currency-input budget-input" min="0" step="0.01" value="0">
 </div>
 </div>
 <div class="budget-item">
 <label>Bills</label>
 <div class="currency-input-wrapper">
-<input type="number" id="budget-bills" class="currency-input budget-input" min="0" step="0.01">
+<input type="number" id="budget-bills" class="currency-input budget-input" min="0" step="0.01" value="0">
 </div>
 </div>
 <div class="budget-item">
 <label>Other</label>
 <div class="currency-input-wrapper">
-<input type="number" id="budget-other" class="currency-input budget-input" min="0" step="0.01">
+<input type="number" id="budget-other" class="currency-input budget-input" min="0" step="0.01" value="0">
 </div>
 </div>
 <div class="budget-item">
 <label>Business Expenses</label>
 <div class="currency-input-wrapper">
-<input type="number" id="budget-business" class="currency-input budget-input" min="0" step="0.01">
+<input type="number" id="budget-business" class="currency-input budget-input" min="0" step="0.01" value="0">
 </div>
 </div>
 <div class="budget-item">
 <label>Gym</label>
 <div class="currency-input-wrapper">
-<input type="number" id="budget-gym" class="currency-input budget-input" min="0" step="0.01">
+<input type="number" id="budget-gym" class="currency-input budget-input" min="0" step="0.01" value="0">
 </div>
 </div>
 <div class="budget-item">
 <label>Travel</label>
 <div class="currency-input-wrapper">
-<input type="number" id="budget-travel" class="currency-input budget-input" min="0" step="0.01">
+<input type="number" id="budget-travel" class="currency-input budget-input" min="0" step="0.01" value="0">
 </div>
 </div>
 <div class="budget-item">
 <label>Shayna Day Care</label>
 <div class="currency-input-wrapper">
-<input type="number" id="budget-daycare" class="currency-input budget-input" min="0" step="0.01">
+<input type="number" id="budget-daycare" class="currency-input budget-input" min="0" step="0.01" value="0">
 </div>
 </div>
 </div>
